# scs_api_geolocation

./: Cargo.toml  README.md  env_prod
migrations/2023-12-15-082904_create_tasks/: down.sql  up.sql
src/: database.rs  main.rs  schema.rs
src/contentloader/: content_loader.rs  items.rs  mod.rs
src/database/: requests.rs  responses.rs
templates/: index.html.hbs
templates/css/: base.css  create.css  index.css  list_providers.css
templates/html/: base.html  base.html_  create.html  index.html  index.html.hbs  list_providers.html
templates/js/: base.js  create.js  list_providers.js
