[package]
name = "rust-rocket-sqlite-api"
version = "0.1.0"
description = "test API webserver with sqlite3 db"
authors = ["ZHENG Robert <zheng.bote@googlemail.com>"]
homepage = "https://www.robert.hase-zheng.net"
readme = "README.md"
repository = "https://github.com/rust-lang/cargo/"
license = "MIT OR Apache-2.0"

edition = "2021"
rust-version = "1.74.1"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]